# org-sync

./: Cargo.toml  README.md  justfile
data/: 2511621091378717739.ics  keywords.org
src/: database.rs  main.rs  org.rs  tasks.rs
