[package]
name = "org-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orgize = { path = "../../oss/orgize", version = "0.9.0", features = ["indexmap", "ser"] }
ical = { path = "../../oss/ical-rs", version = "0.6.0", features = ["generator", "ical"] }
rusqlite = { version = "0.26.1", features = ["blob", "chrono", "serde_json"] }
serde_json = "1.0.72"
serde = "1.0.130"
stable-eyre = "0.2.2"
fallible-streaming-iterator = "0.1.9"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
walkdir = "2.3.2"
